# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] A better method of detecting the system locale is used, so
  it should not be necessary to set the LANG environment variable on
  Windows to get internationalized text. Thanks to Dirk Loss for the
  suggestion. [David]

o [Zenmap] Removed some unnecessary GTK+ files from the files
  installed by the Windows executable installer [David].

o [Zenmap] Tweaked the file format of the topology icons
  (firewall.png, padlock.png, etc.) in an attempt to improve
  compatibility with some versions of GTK+. This may fix a crash like
    File "radialnet/gui/Image.py", line 53, in get_pixbuf
      self.__cache[icon + image_type] = gtk.gdk.pixbuf_new_from_file(file)
    GError: Couldn't recognize the image file format for file 'radialnet/padlock.png'
  Thanks to Trevor Bain for a report and help debugging [David].

Nmap 4.85BETA3 [2009-2-2]

o Revert the temporary GTK DLL workaround (r11899) which added
  duplicate DLL files to the distribution.  David found that using a
  different GTK download fixed the problem (see
  docs/win32-installer-zenmap-buildguide.txt) and Fyodor was able to
  reproduce and implement.

o The conditions for printing OS fingerprints to XML output are now
  the same as are used to decide whether to print them in the other
  formats. So they will be printed if submission is desirable,
  otherwise they are only printed if debuging is enabled or verbosity
  is 2 or higher. [Tom Sellers]

o Removed some Brazilian poetry/lyrics from Zenmap source code
  (NmapOutputViewer.py). We've seen enough of it in the debug logs. "E
  nao se entrega, nao".

o Fix Ncat compilation with the MingW windows compiler. [Gisle Vanem]

o Corrected some NSE libraries (datafiles, tab) which were using the
  old arg table interface. [Patrick]

o [Zenmap] Fixed a crash that happened when running a scan directly
  from the command wizard without saving a profile [David]:
    NmapParser.py", line 417, in set_target