@@ -30,7 +30,12 @@ winbuild:
 	cp winpcap/winpcap-nmap-*.exe nmap-$(NMAP_VERSION)
 	cp vcredist_x86.exe nmap-$(NMAP_VERSION)
 	cp ../ncat/Release/ncat.exe nmap-$(NMAP_VERSION)
+# Install the ndiff batch file wrapper in the zip distribution.
+	cp ../ndiff/ndiff nmap-$(NMAP_VERSION)/ndiff.py
+	cp python-wrap.bat nmap-$(NMAP_VERSION)/ndiff.bat
 	zip -r nmap-$(NMAP_VERSION)-win32.zip nmap-$(NMAP_VERSION)
+# Remove ndiff.py and ndiff.bat for the installer because it has ndiff.exe.
+	rm -f nmap-$(NMAP_VERSION)/ndiff.py nmap-$(NMAP_VERSION)/ndiff.bat
 	cd ../zenmap && install_scripts/windows/copy_and_compile.bat
 	cp -R ../zenmap/dist/* nmap-$(NMAP_VERSION)/
 	cp ../zenmap/README nmap-$(NMAP_VERSION)/ZENMAP_README
